RESOLVED FIXED78553
Force slow-scrolling mode when there are position:fixed elements on a page
https://bugs.webkit.org/show_bug.cgi?id=78553
Summary Force slow-scrolling mode when there are position:fixed elements on a page
Anders Carlsson
Reported 2012-02-13 16:56:45 PST
Force slow-scrolling mode when there are position:fixed elements on a page
Attachments
Patch (8.07 KB, patch)
2012-02-13 17:00 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2012-02-13 17:00:00 PST
Anders Carlsson
Comment 2 2012-02-13 17:08:26 PST
Note You need to log in before you can comment on or make changes to this bug.